--- a/src/Frontend/src/variables.less
+++ b/src/Frontend/src/variables.less
@@ -26,7 +26,7 @@
 @borderColor: #E5E5E5;
 @darkGrey: #C4C4C4;
 @whiteSmoke: #F2F2F2;
-@backgroundGray: #F2F2F2;
+@backgroundGray: @whiteSmoke;
 
 @guideIconColor: @lightViolet;
 @statusUnseenColor: #C4C4C4;
