--- a/src/Frontend/src/components/course/Navigation/Course/CourseNavigation/CourseNavigation.less
+++ b/src/Frontend/src/components/course/Navigation/Course/CourseNavigation/CourseNavigation.less
@@ -1,9 +1,18 @@
 @import "../../../../../variables.less";
 
 .root {
+  position: relative;
   width: 360px;
   max-width: 360px;
-  max-height: calc(100vh - @headerHeight - @headerDivider - 10px);
+  max-height: calc(100vh - @headerHeight - @headerDivider);
   flex-shrink: 0;
+}
+
+.contentWrapper {
+  position: fixed;
+  width: 360px;
   overflow-y: auto;
+  top: calc(@headerHeight + @headerDivider);
+  max-height: calc(100vh - @headerHeight - @headerDivider);
+
 }
