made navigation progress update work, updated nav styles

--- a/src/Frontend/src/components/course/Navigation/Unit/UnitNavigation/Navigation.less
+++ b/src/Frontend/src/components/course/Navigation/Unit/UnitNavigation/Navigation.less
@@ -16,5 +16,6 @@
   overflow-y: auto;
   top: calc(@headerHeight + @headerDivider);
   max-height: calc(100vh - @headerHeight - @headerDivider);
-
+  background: #ffffff;
+  z-index: 3;
 }
