--- a/src/Frontend/src/components/flashcards/CoursePage/CourseCards/courseCards.less
+++ b/src/Frontend/src/components/flashcards/CoursePage/CourseCards/courseCards.less
@@ -53,6 +53,8 @@
 }
 
 .unitCardLocked {
+  position: relative;
+
   background: @lightGrey;
   color: @disabledColor;
 }
@@ -87,6 +89,10 @@
 
 .unitCardButton {
   display: none;
+
+  position: absolute;
+  bottom: 20px;
+  left: 22px;
 }
 
 .unitCard:hover .unitCardButton {
