--- a/src/Frontend/src/components/course/Navigation/Course/CourseNavigation/CourseNavigation.less
+++ b/src/Frontend/src/components/course/Navigation/Course/CourseNavigation/CourseNavigation.less
@@ -14,5 +14,6 @@
   overflow-y: auto;
   top: calc(@headerHeight + @headerDivider);
   max-height: calc(100vh - @headerHeight - @headerDivider);
-
+  background: #ffffff;
+  z-index: 3;
 }
