--- a/src/Frontend/src/variables.less
+++ b/src/Frontend/src/variables.less
@@ -17,12 +17,13 @@
 @linkColor: #3072C4;
 @linkHoverColor: #23527c;
 @dimgray: #696969;
+@lightGrey: #E5E5E5;
+@grey: #717171;
 @darkGrey: #616161;
 @additionalColor: #808080;
 @disabledColor: #A0A0A0;
 @metroDefault: #C4C4C4;
 @geinsboro: #DADADA;
-@lightGrey: #E5E5E5;
 @borderColor: #E5E5E5;
 @darkGrey: #C4C4C4;
 @whiteSmoke: #F2F2F2;
