--- a/src/Frontend/src/components/course/Navigation/Course/CourseNavigationItem/CourseNavigationItem.less
+++ b/src/Frontend/src/components/course/Navigation/Course/CourseNavigationItem/CourseNavigationItem.less
@@ -12,7 +12,7 @@
   position: relative;
   display: flex;
   justify-content: space-between;
-  padding: 10px 19px 10px 24px;
+  padding: 8px 12px 8px 14px;
   color: @linkColor;
   text-decoration: none;
   font-weight: 300;
@@ -23,15 +23,14 @@
     text-decoration: none;
   }
 }
-
 .active {
   background-color: @backgroundGray;
 }
 
 
 .text {
-  font-size: 18px;
-  line-height: 24px;
+  font-size: 16px;
+  line-height: 1.33;
   overflow: hidden;
   text-overflow: ellipsis;
 
@@ -46,5 +45,16 @@
   flex-shrink: 0;
   padding-top: 8px;
   padding-left: 5px;
+}
+
+
+@media (min-width: @maxLaptopWidth) {
+  .itemLink {
+    padding: 10px 19px 10px 24px;
+  }
+
+  .text {
+    font-size: 18px;
+  }
 }
 
