--- a/src/Frontend/src/components/course/Navigation/Course/Flashcards/Flashcards.less
+++ b/src/Frontend/src/components/course/Navigation/Course/Flashcards/Flashcards.less
@@ -3,16 +3,17 @@
 .root {
   position: fixed;
   bottom: 0;
-  left: 0;
+  left: -500px;
   z-index: 10;
-  width: 360px;
+  width: 250px;
   background: #ffffff;
   border: none;
   border-top: 1px solid @borderColor;
   box-shadow: none;
   text-align: left;
-  padding: 13px 12px 14px 24px;
+  padding: 8px 12px 9px 14px;
   cursor: pointer;
+  transition: left 300ms ease-in-out;
 
   &:hover {
     color: #ffffff;
@@ -48,6 +49,33 @@
 
 .text {
   color: @linkColor;
-  font-size: 18px;
-  line-height: 24px;
+  font-size: 16px;
+  line-height: 1.33;
+}
+
+:global {
+  .open :local {
+    .root {
+      left: 0;
+    }
+  }
+}
+
+@media (min-width: @maxPhoneWidth) {
+  .root {
+    left: 0;
+    transition: none;
+  }
+}
+
+
+@media (min-width: @maxLaptopWidth) {
+  .root {
+    width: 360px;
+    padding: 13px 12px 14px 24px;
+  }
+
+  .text {
+    font-size: 18px;
+  }
 }
