--- a/src/Frontend/src/components/course/Navigation/Unit/NavigationContent/NavigationContent.less
+++ b/src/Frontend/src/components/course/Navigation/Unit/NavigationContent/NavigationContent.less
@@ -7,11 +7,17 @@
 }
 
 .header {
-  margin: 0 19px 24px 57px;
+  margin: 0 12px 8px 33px;
   text-transform: uppercase;
   font-size: 10px;
   font-weight: lighter;
   line-height: 1.2;
   letter-spacing: 1.2px;
   color: @additionalColor;
+}
+
+@media (min-width: @maxLaptopWidth) {
+  .header {
+    margin: 0 19px 24px 57px;
+  }
 }
