--- a/src/Frontend/src/components/course/Navigation/Unit/NextUnit/NextUnit.less
+++ b/src/Frontend/src/components/course/Navigation/Unit/NextUnit/NextUnit.less
@@ -1,23 +1,24 @@
 @import "../../../../../variables.less";
 
 .root {
-  width: 360px;
+  width: 250px;
 
   position: fixed;
   display: flex;
   bottom: 0;
-  left:0;
+  left: -500px;
   z-index: 10;
 
   justify-content: space-between;
   align-items: center;
-  padding: 13px 18px 14px 24px;
+  padding: 8px 12px 9px 14px;
   background: #fff;
   border: none;
   border-top: 1px solid @borderColor;
   box-shadow: none;
   text-align: left;
   cursor: pointer;
+  transition: left 300ms ease-in-out;
 
   &:hover {
     color: #ffffff;
@@ -33,6 +34,14 @@
   &:active,
   &:focus {
     text-decoration: none;
+  }
+}
+
+:global {
+  .open :local {
+    .root {
+      left: 0;
+    }
   }
 }
 
@@ -53,8 +62,8 @@
 .title {
   margin: 0;
   font-weight: normal;
-  font-size: 18px;
-  line-height: 24px;
+  font-size: 16px;
+  line-height: 1.33;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -63,4 +72,23 @@
 .arrow {
   color: @geinsboro;
   flex-shrink: 0;
+}
+
+@media (min-width: @maxPhoneWidth) {
+  .root {
+    left: 0;
+    transition: none;
+  }
+}
+
+
+@media (min-width: @maxLaptopWidth) {
+  .root {
+    width: 360px;
+    padding: 13px 12px 14px 24px;
+  }
+
+  .text {
+    font-size: 18px;
+  }
 }
