--- a/src/Frontend/src/components/course/Navigation/Unit/UnitNavigation/Navigation.less
+++ b/src/Frontend/src/components/course/Navigation/Unit/UnitNavigation/Navigation.less
@@ -1,21 +1,59 @@
 @import "../../../../../variables.less";
 
 .root {
-  position: relative;
-  width: 360px;
-  max-width: 360px;
+  position: fixed;
+  width: 250px;
+  max-width: 250px;
   max-height: calc(100vh - @headerHeight - @headerDivider);
+  left: -500px;
   flex-shrink: 0;
+  z-index: 10;
+  transition: left 300ms ease-in-out;
+}
+
+:global {
+  .open :local {
+    .root {
+      left: 0;
+    }
+  }
 }
 
 .contentWrapper {
   position: fixed;
 
-  width: 360px;
+  width: 250px;
 
   overflow-y: auto;
-  top: calc(@headerHeight + @headerDivider);
-  max-height: calc(100vh - @headerHeight - @headerDivider);
+  top: @headerHeight;
+  bottom: 0;
+  max-height: calc(100vh - @headerHeight);
   background: #ffffff;
   z-index: 3;
+}
+
+@media (min-width: @maxPhoneWidth) {
+  .root {
+    position: relative;
+    left: 0;
+    transition: none;
+  }
+
+  .contentWrapper {
+    top: calc(@headerHeight + @headerDivider);
+    bottom: auto;
+    max-height: calc(100vh - @headerHeight - @headerDivider);
+  }
+}
+
+
+@media (min-width: @maxLaptopWidth) {
+  .root {
+    width: 360px;
+    max-width: 360px;
+  }
+
+  .contentWrapper {
+    width: 360px;
+  }
 }
