--- a/src/Frontend/src/components/flashcards/Flashcards/Results/results.less
+++ b/src/Frontend/src/components/flashcards/Flashcards/Results/results.less
@@ -2,7 +2,7 @@
 
 .resultsContainer {
   font-family: @defaultFonts;
-  height: 141px;
+  height: 140px;
 }
 
 .headerText {
@@ -33,7 +33,8 @@
 }
 
 .resultsElement {
-  width: 70px;
+  width: 20%;
+  max-width: 70px;
   height: 70px;
 
   color: #fff;
@@ -48,44 +49,23 @@
   margin-right: 15px;
 }
 
+@media (max-width: @maxPhoneWidth) {
+  .resultsElement {
+    margin-right: 3px;
+    width: 18%;
+    height: 55%;
+  }
+
+  .footer {
+    display: none;
+  }
+}
+
 .resultsElement:hover,
 .resultsElement:focus {
   cursor: pointer;
-}
-
-.resultsElement:focus {
   outline: 0;
   box-shadow: 0 0 0 3px rgba(0, 123, 255, .5);
-}
-
-.resultsElement:hover span,
-.resultsElement:focus span {
-  display: none;
-}
-
-.resultsVeryBad:hover:before,
-.resultsVeryBad:focus:before {
-  content: ':\'(';
-}
-
-.resultsBad:hover:before,
-.resultsBad:focus:before {
-  content: ':(';
-}
-
-.resultsAverage:hover:before,
-.resultsAverage:focus:before {
-  content: ':|';
-}
-
-.resultsGood:hover:before,
-.resultsGood:focus:before {
-  content: ':)';
-}
-
-.resultsExcellent:hover:before,
-.resultsExcellent:focus:before {
-  content: ';D';
 }
 
 .resultsVeryBad {
