--- a/src/Frontend/src/components/flashcards/Flashcards/flashcards.less
+++ b/src/Frontend/src/components/flashcards/Flashcards/flashcards.less
@@ -7,37 +7,59 @@
 @modalBackgroundColor: #fff;
 @modalZIndex: 10;
 
-.unitTitle {
-  font-family: @defaultFonts;
-  font-size: 10px;
-  line-height: 30px;
-  text-transform: uppercase;
-  color: @additionalColor;
+.overlay {
+  position: fixed;
+  z-index: 10;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
 
-  margin: 0;
+  animation: appear 250ms;
+
+  background-color: rgba(51, 51, 51, 0.8);
 }
 
 .frontTextContainer {
-  height: @modalHeight - 170px;
-  width: @modalWidth - 120px;
-
+  height: 90%;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
 .questionFront {
-  max-height: 100%;
-  max-width: 100%;
+  width: 100%;
+  max-height: 85%;
 
   font-size: 32px;
   font-family: @defaultFonts;
+  text-align: center;
   overflow: auto;
   margin: 0;
 }
 
+.showAnswerButtonContainer {
+  position: absolute;
+  bottom: 49px;
+  left: 57px;
+}
+
+.backWrapper {
+  height: 96%;
+
+  display: flex;
+  flex-direction: column;
+}
+
 .backTextContainer {
-  height: @modalHeight - 230px;
+  height: 95%;
+
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+
+  margin-bottom: 10px;
 
   font-family: @defaultFonts;
   font-size: 20px;
@@ -45,6 +67,26 @@
   overflow: auto;
 
   animation: appear 300ms;
+}
+
+.questionBack {
+  width: 100%;
+  max-height: 100%;
+
+  margin-top: 15px;
+  margin-bottom: 30px;
+
+  text-align: center;
+
+  font-family: @defaultFonts;
+  font-size: 24px;
+  line-height: 24px;
+  font-weight: 400;
+}
+
+.answerBack{
+  width: 100%;
+  max-height: 100%;
 }
 
 @keyframes appear {
@@ -56,38 +98,21 @@
   }
 }
 
-.questionBack {
+.unitTitle {
   font-family: @defaultFonts;
-  font-size: 24px;
-  line-height: 24px;
-  font-weight: 400;
+  font-size: 10px;
+  line-height: 30px;
+  text-transform: uppercase;
+  color: @additionalColor;
 
-  margin-top: 15px;
-  margin-bottom: 26px;
-}
-
-.showAnswerButtonContainer {
-  position: absolute;
-  bottom: 49px;
-  left: 57px;
-}
-
-.overlay {
-  position: fixed;
-  z-index: 3;
-  left: 0;
-  top: 0;
-  bottom: 0;
-  right: 0;
-
-  animation: appear 250ms;
-
-  background-color: rgba(51, 51, 51, 0.8);
+  margin: 0;
 }
 
 .modal {
   width: @modalWidth;
   height: @modalHeight;
+  max-width: 100%;
+  max-height: 100%;
 
   position: absolute;
   top: 50%;
@@ -99,30 +124,6 @@
   padding: 36px 56px;
   border-radius: 10px;
   margin-top: -30px;
-}
-
-.controlGuideContainer {
-  width: 100%;
-
-  position: absolute;
-  top: 50%;
-  transform: translate(0, @modalHeight/2);
-
-  margin: 0;
-  color: @lightYellow;
-  text-align: center;
-  font-size: 14px;
-  line-height: 28px;
-}
-
-.controlGuideContainer > span {
-  padding: 3px 9px;
-  margin: 5px;
-  background: rgba(0, 0, 0, 0.5);
-  border: 1px solid @lightYellow;
-  box-sizing: border-box;
-  border-radius: 2px;
-  text-transform: uppercase;
 }
 
 .closeButton {
@@ -146,12 +147,6 @@
 .closeButton:focus {
   outline: 0;
   box-shadow: 0 0 0 3px rgba(0, 123, 255, .5);
-}
-
-.progressBarContainer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
 }
 
 .secondModal {
@@ -228,4 +223,93 @@
 
 .overflow {
   overflow: hidden;
+}
+
+.wrapper {
+  height: 100%;
+}
+
+.controlGuideContainer {
+  width: 100%;
+
+  position: absolute;
+  top: 50%;
+  transform: translate(0, @modalHeight/2);
+
+  margin: 0;
+  color: @lightYellow;
+  text-align: center;
+  font-size: 14px;
+  line-height: 28px;
+}
+
+.controlGuideContainer > span {
+  padding: 3px 9px;
+  margin: 5px;
+  background: rgba(0, 0, 0, 0.5);
+  border: 1px solid @lightYellow;
+  box-sizing: border-box;
+  border-radius: 2px;
+  text-transform: uppercase;
+}
+
+.progressBarContainer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+
+@media (max-width: @maxPhoneWidth) {
+  .controlGuideContainer {
+    display: none;
+  }
+
+  .textContainer {
+    height: 85%;
+  }
+
+  .modal {
+    height: 88%;
+    transform: translate(-50%, -44%);
+    padding: 26px 10px;
+  }
+
+  .secondModal {
+    transform: translate(-50%, -48%) scale(0.95);
+  }
+
+  .thirdModal {
+    transform: translate(-50%, -52%) scale(0.9);
+  }
+
+  .fourthModal {
+    display: none;
+  }
+
+  @keyframes moveFromSecondToFirst {
+    from {
+      transform: translate(-50%, -48%) scale(0.95);
+      z-index: @modalZIndex - 1;
+      background: darken(@modalBackgroundColor, 10%);
+    }
+    to {
+      transform: translate(-50%, -44%);
+      z-index: @modalZIndex;
+      background: @modalBackgroundColor;
+
+    }
+  }
+
+  @keyframes moveFromThirdToSecond {
+    from {
+      transform: translate(-50%, -52%) scale(0.9);
+      z-index: @modalZIndex - 3;
+      background: darken(@modalBackgroundColor, 18%);
+    }
+    to {
+      transform: translate(-50%, -48%) scale(0.95);
+      z-index: @modalZIndex - 1;
+      background: darken(@modalBackgroundColor, 10%);
+    }
+  }
 }
