--- a/src/Frontend/src/components/flashcards/UnitPage/unitPage.less
+++ b/src/Frontend/src/components/flashcards/UnitPage/unitPage.less
@@ -31,17 +31,17 @@
 
 @media (max-width: @maxPhoneWidth) {
   .pageContainer {
-    margin-left: 10px;
-    margin-right: 5px;
+    margin-left: 20px;
   }
 
-  .progressBarTitle{
+  .progressBarTitle {
     margin-top: 5px;
   }
 
   .title {
     margin-top: 5px;
-    font-size: 26px;
+    margin-bottom: 0;
+    font-size: 25px;
     line-height: 30px;
   }
 }
