--- a/src/Frontend/src/variables.less
+++ b/src/Frontend/src/variables.less
@@ -12,6 +12,7 @@
 @progressBarGreen: #3F9726;
 @green: #5cb85c;
 @blue: #0087d5;
+@lightBlue: #4C8DD9;
 @progressBarBlue: #1D85D0;
 @lightViolet: #C8C7FE;
 @linkColor: #3072C4;
@@ -28,6 +29,9 @@
 @darkGrey: #C4C4C4;
 @whiteSmoke: #F2F2F2;
 @backgroundGray: @whiteSmoke;
+
+@flashcardUnitBackgroundBlue: @lightBlue;
+@flashcardUnitBackgroundGreen: @successColor;
 
 @guideIconColor: @lightViolet;
 @statusUnseenColor: #C4C4C4;
