--- a/src/Frontend/src/components/course/Course/Course.less
+++ b/src/Frontend/src/components/course/Course/Course.less
@@ -7,18 +7,20 @@
 
 .pageWrapper {
   width: 100%;
-  max-width: 100%;
+  max-width: calc(100vw - 40px);
 }
 
 
 @media (min-width: @maxPhoneWidth) {
   .pageWrapper {
-    max-width: calc(100vw - 20px - 250px);
+    max-width: calc(100vw - 40px - 250px);
+    padding-right: 20px;
   }
 }
 
 @media (min-width: @maxLaptopWidth) {
   .pageWrapper {
     max-width: 862px;
+    padding-right: 20px;
   }
 }
