--- a/src/Frontend/src/components/flashcards/Flashcards/Results/results.less
+++ b/src/Frontend/src/components/flashcards/Flashcards/Results/results.less
@@ -1,6 +1,6 @@
 @import "./../../../../variables";
 
-.resultsContainer {
+.root {
   font-family: @defaultFonts;
   height: 140px;
 }
@@ -32,10 +32,17 @@
   opacity: 0.2;
 }
 
+.resultsContainer {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+}
+
 .resultsElement {
-  width: 20%;
+  width: 17vw;
+  height: 17vw;
   max-width: 70px;
-  height: 70px;
+  max-height: 70px;
 
   color: #fff;
   border-radius: 50%;
@@ -50,10 +57,16 @@
 }
 
 @media (max-width: @maxPhoneWidth) {
+  .headerText {
+    text-align: center;
+  }
+
+  .root {
+    height: auto;
+  }
+
   .resultsElement {
-    margin-right: 3px;
-    width: 18%;
-    height: 55%;
+    margin: auto;
   }
 
   .footer {
