--- a/src/Frontend/src/components/flashcards/Guides/guides.less
+++ b/src/Frontend/src/components/flashcards/Guides/guides.less
@@ -30,3 +30,9 @@
   box-sizing: border-box;
   box-shadow: inset 0 0 0 2px #fff;
 }
+
+@media (max-width: @maxPhoneWidth) {
+  .guidesElement {
+    font-size: 16px;
+  }
+}
