--- a/src/Frontend/src/components/flashcards/UnitPage/ShortQuestions/shortQuestions.less
+++ b/src/Frontend/src/components/flashcards/UnitPage/ShortQuestions/shortQuestions.less
@@ -5,6 +5,7 @@
 
 .questionsContainer {
   display: flex;
+  justify-content: space-between;
   margin-bottom: 30px;
   margin-top: 30px;
 }
@@ -19,10 +20,6 @@
   font-family: @defaultFonts;
   line-height: 24px;
   margin-bottom: 18px;
-}
-
-.listElement p {
-  margin: 0;
 }
 
 .listElement:hover {
@@ -67,7 +64,7 @@
   margin-left: 10px;
 }
 
-:global div.tex  {
+:global div.tex {
   display: inline-block;
 
   max-width: 100%;
@@ -77,7 +74,6 @@
 @media (max-width: @maxPhoneWidth) {
   .questionsContainer {
     flex-direction: column-reverse;
-    margin-top: 10px;
   }
 
   .questionsTextContainer {
@@ -94,6 +90,6 @@
   }
 
   .toggleText {
-    font-size: 18px;
+    font-size: 13px;
   }
 }
