Added Menu item in header to open/close mobile navigation

--- a/src/Frontend/src/components/common/Header.less
+++ b/src/Frontend/src/components/common/Header.less
@@ -20,6 +20,11 @@
     height: @headerHeight;
   }
 
+  .headerElement{
+    display: inline-block;
+    padding: 11px 20px 15px 30px;
+  }
+
   .header__logo {
     color: @linkColor;
     font-size: 18px;
