--- a/src/Frontend/src/components/flashcards/Flashcards/flashcards.less
+++ b/src/Frontend/src/components/flashcards/Flashcards/flashcards.less
@@ -236,6 +236,10 @@
 }
 
 @media (max-width: @maxPhoneWidth) {
+  .questionFront {
+    font-size: 26px;
+  }
+
   .closeButton {
     top: 13px;
     right: 8px;
