--- a/src/Frontend/src/components/common/Header.less
+++ b/src/Frontend/src/components/common/Header.less
@@ -20,11 +20,6 @@
     height: @headerHeight;
   }
 
-  .headerElement{
-    display: inline-block;
-    padding: 11px 20px 15px 30px;
-  }
-
   .header__logo {
     color: @linkColor;
     font-size: 18px;
@@ -52,7 +47,6 @@
     }
   }
 
-  .header__toc-menu,
   .header__course-menu,
   .header__sysadmin-menu,
   .header__my-courses-menu {
@@ -288,5 +282,20 @@
     & {
       display: none !important;
     }
+  }
+}
+
+.navMenuButton {
+  border: none;
+  background: initial;
+}
+
+.navMenuButton:focus, .navMenuButton:active {
+  outline: none;
+}
+
+@media (max-width: @maxPhoneWidth) {
+  .headerElement {
+    padding: 9px 10px 10px 10px;
   }
 }
