--- a/src/uLearn.Web/Views/Shared/_UserListPartial.cshtml
+++ b/src/uLearn.Web/Views/Shared/_UserListPartial.cshtml
@@ -30,6 +30,8 @@
 			<th>Удаление</th>
 		}
 	</tr>
+	<div class="react-render" data-component="ToggleRoles"> </div>
+
 	
 	@foreach (var user in Model.Users)
 	{
