--- a/src/Frontend/src/components/flashcards/Flashcards/flashcards.less
+++ b/src/Frontend/src/components/flashcards/Flashcards/flashcards.less
@@ -59,6 +59,10 @@
   font-weight: 400;
 }
 
+.theoryLinks {
+  color: #888;
+}
+
 @keyframes appear {
   from {
     opacity: 0;
@@ -66,6 +70,14 @@
   to {
     opacity: 1.0;
   }
+}
+
+.titleContainer {
+  width: fit-content;
+}
+
+.titleContainer:hover {
+  cursor: default;
 }
 
 .unitTitle {
