Added exercise and flashcards icons to navigation

--- a/src/Frontend/src/components/course/Navigation/Unit/NavigationItem/NavigationItem.less
+++ b/src/Frontend/src/components/course/Navigation/Unit/NavigationItem/NavigationItem.less
@@ -164,6 +164,12 @@
   z-index: 2;
 }
 
+.exerciseIcon {
+  letter-spacing: 2px;
+  padding-left: 2px;
+  font-family: monospace;
+}
+
 .complete {
   background-color: @progressBarGreen;
   color: #ffffff;
