--- a/src/uLearn.Web/Views/Shared/_UserListPartial.cshtml
+++ b/src/uLearn.Web/Views/Shared/_UserListPartial.cshtml
@@ -8,7 +8,7 @@
 {
 	@Html.AntiForgeryToken()
 }
-
+<div class="react-render" data-component="ToggleRoles"> </div>
 <table class="table table-condensed">
 	<tr>
 		<th>Пользователь</th>
@@ -30,7 +30,7 @@
 			<th>Удаление</th>
 		}
 	</tr>
-	<div class="react-render" data-component="ToggleRoles"> </div>
+	
 
 	
 	@foreach (var user in Model.Users)
@@ -110,11 +110,16 @@
 
 @helper RoleButton(SingleCourseRolesModel courseRoles, string role, string cssClass)
 {
+	
 	var buttonClass = "btn-" + cssClass;
 	<button type="button"
 			class="btn btn-sm btn-default @( courseRoles.HasAccess ? buttonClass : "")"
 			data-css-class="@buttonClass"
 			data-toggle-url="@courseRoles.ToggleUrl"
+			data-toggle-userName = "@courseRoles.UserName"
+			data-toggle-role = "@courseRoles.Role.GetDisplayName()"
+			data-toggle-isRole = "@true"
+			data-toggle-courseTitle = "@courseRoles.CourseTitle"
 			onclick="openPopup(this, ToggleButtonClass)">
 		@role
 		
@@ -140,9 +145,15 @@
 		<ul class="dropdown-menu" data-css-class="li-@cssClass">
 			@foreach (var course in coursesRoles.CourseRoles)
 			{
+				
 				<li class="@( course.HasAccess ? liClass : "")"
 					data-toggle-url="@course.ToggleUrl"
+					data-toggle-userName="@course.UserName"
+					data-toggle-role="@course.Role"
+					data-toggle-isRole="@true"
+					data-toggle-courseTitle = "@course.CourseTitle"
 					onclick="openPopup(this, ToggleDropDownClass)">
+					
 					<a>@course.CourseTitle</a>
 				</li>
 			}
@@ -170,8 +181,13 @@
 					var courseAccess = user.CourseAccesses[courseId][courseAccessType];
 					<li class="@( courseAccess.HasAccess ? "li-info" : "")"
 						data-toggle-url="@courseAccess.ToggleUrl"
+						data-toggle-userName="@courseAccess.UserName"
+                        data-toggle-role = "@courseAccess.AccessType.GetDisplayName()"
+						data-toggle-isRole = "@false"
+						data-toggle-courseTitle = "@courseAccess.CourseTitle"
 						data-css-class="li-info"
 						data-has-access="@( courseAccess.HasAccess ? "true" : "false" )"
+						
 						onclick="openPopup(this, ToggleButtonClass)">
 						<a>@courseAccessType.GetDisplayName()</a>
 					</li>
